--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "mmproj",
+  "name": "71mb4",
   "version": "1.0.0",
   "scripts": {
+    "now": "concurrently \"npm run db\" \"npm run prod\"",
+    "db": "mongod --dbpath ./db ",
+    "prod": "node start",
     "start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
     "lite": "lite-server",
     "postinstall": "typings install",
@@ -30,6 +33,7 @@
     "ng2-datepicker": "^1.0.6",
     "ng2-datetime": "^1.1.5",
     "ng2-validation": "^1.4.1",
+    "nodemailer": "^3.0.2",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "0.19.27",
