--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bootstrap-datepicker": "^1.6.4",
     "bootstrap-timepicker": "^0.5.2",
     "core-js": "^2.4.0",
+    "jquery": "^3.1.1",
     "ng2-datepicker": "^1.0.6",
     "ng2-datetime": "^1.1.5",
     "ng2-validation": "^1.4.1",
